root-khet/webapp/src/main/webapp/resources/css/product.css
.carousel {
	background-color: white;
	height: 340px;
	padding:0px;
}

.highlighted {
	border-radius: 3px;
  	border: 1px solid rgba(0,0,0,.09);
  	box-shadow: 0 2px 4px 0 rgba(0,0,0,.04);
}

 .slick-next:before { 
 	color: grey; 
 	font-size:50px; 
 	position:relative;
 	bottom: 12px;
}
 
 .slick-prev:before { 
 	color: grey; 
 	font-size:50px;
 	position: relative;
 	right: 30px;
 	bottom:12px;
}

.slick-dotes {
	font-size:50px;
}

.slick-list {
	outline:none;
}

.slick-slide {
	outline:none;
}

.slick-dots li button:before
{
	font-size: 15px;
}

.image-holder {
	margin-top: 17px;
	margin-right:25px;
	margin-left:25px;
}

.image-item {
	max-width: 500px;
	max-height: 300px;
	margin: auto auto;
}

.video-item {
	width: 500px;
}

.video-holder {
	padding: 0px;
	height: 300px;
	margin-top: 17px;
	margin-right:25px;
	margin-left:25px;
}

.product-item {
	background-color: white;
	padding: 15px 10px;
	margin-top: 20px;
}

.creator-item {
	background-color: white;
	padding: 10px 20px;
	margin-top: 20px;
	border-color: #33bb9c;
}

.long-description p {
	font-family: sans-serif;
	font-size: 1.3em;
	font-weight: 400;
	margin-top: 2em;
}

.long-description a {
	font-size: 1.3em;
	color: #F64763;
}

.back-to-products {
	text-align: center;
}

